--- a/css/style.css
+++ b/css/style.css
@@ -169,13 +169,13 @@ span {
 @media only screen and (max-width: 1024px) {
     #lets-connect {
         margin-top: 5%;
-    };
+    }
 }
 
 @media only screen and (max-width:900px) {
     .biopic {
         width: 175px;
-    };
+    }
 }
 
 @media only screen and (max-width: 750px) {
@@ -189,7 +189,7 @@ span {
 
     .welcome-message {
         display: none;
-    };
+    }
 }
 
 #map {
@@ -208,5 +208,5 @@ span {
     #skills-h3,
   .biopic {
         display: block;
-    };
+    }
 }
